--- a/templates/thread.html
+++ b/templates/thread.html
@@ -8,7 +8,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 	{% if config.meta_keywords %}<meta name="keywords" content="{{ config.meta_keywords }}" />{% endif %}
 	<link rel="stylesheet" type="text/css" id="stylesheet" href="{{ config.uri_stylesheets }}{{ config.default_stylesheet.1 }}" />
-	{% if not nojavascript %}<script type="text/javascript" src="{{ config.url_javascript }}"></script>{% endif %}
+        {% if not nojavascript %}
+                <script type="text/javascript" src="{{ config.url_jquery }}"></script>
+                <script type="text/javascript" src="{{ config.url_javascript }}"></script>
+        {% endif %}
+
 	{% if config.recaptcha %}<style type="text/css">{% raw %}
 		.recaptcha_image_cell {
 			background: none !important;
