--- a/templates/post_thread.html
+++ b/templates/post_thread.html
@@ -101,7 +101,11 @@
 		{% if config.thread_expanding %}
 			<a href="#" onclick="return expand_thread('{{ post.root }}{{ board.dir }}{{ config.dir.res }}{{ config.file_page|sprintf(post.id) }}', {{ post.id }})">[{% trans %}Expand{% endtrans %}]</a>
 		{% endif %}
-		<a href="{{ post.root }}{{ board.dir }}{{ config.dir.res }}{{ config.file_page|sprintf(post.id) }}">[{% trans %}Reply{% endtrans %}]</a>
+	{% endif %}
+	{% if config.thread_expanding %}
+		{% if not index %}<span class="shown_when_thread_expanded" style="display: none">{% endif %}
+			<a href="{{ post.root }}{{ board.dir }}{{ config.dir.res }}{{ config.file_page|sprintf(post.id) }}">[{% trans %}Reply{% endtrans %}]</a>
+		{% if not index %}</span>{% endif %}
 	{% endif %}
 	{{ post.postControls }}
 	</p>
@@ -136,5 +140,6 @@
 {% for post in post.posts %}
 	{% include 'post_reply.html' %}
 {% endfor %}
+
 <br class="clear"/>{% if hr %}<hr/>{% endif %}
 	</div>
