update part 2 of 2 for changing ban input
have to also change this template so that radio buttons are replaced with checkboxes too allow multiple boards to be selected.

--- a/templates/mod/ban_form.html
+++ b/templates/mod/ban_form.html
@@ -66,7 +66,7 @@
 			<td>
 				<ul style="list-style:none;padding:2px 5px">
 					<li>
-						<input type="radio" name="board" value="*" id="ban-allboards" checked> 
+						<input type="checkbox" name="board[]" value="*" id="ban-allboards" checked> 
 						<label style="display:inline" for="ban-allboards">
 							<em>{% trans 'all boards' %}</em>
 						</label>
@@ -74,7 +74,7 @@
 					
 					{% for board in boards %}
 						<li>
-							<input type="radio" name="board" value="{{ board.uri }}" id="ban-board-{{ board.uri }}"> 
+							<input type="checkbox" name="board[]" value="{{ board.uri }}" id="ban-board-{{ board.uri }}"> 
 							<label style="display:inline" for="ban-board-{{ board.uri }}">
 								{{ config.board_abbreviation|sprintf(board.uri) }} - {{ board.title|e }}
 							</label>
