--- a/templates/post_reply.html
+++ b/templates/post_reply.html
@@ -75,7 +75,7 @@
 				{% if post.file|extension == 'jpg' %}
 					 <a href="http://regex.info/exif.cgi?url={{ config.domain }}{{ config.uri_img }}{{ post.file }}">e</a>
 				{% endif %}
-				 <a href="http://www.google.com/searchbyimage?image_url={{ config.domain }}{{ config.uri_img }}{{ post.file }}">g</a>
+				 <a href="https://www.google.com/searchbyimage?image_url={{ config.domain }}{{ config.uri_img }}{{ post.file }}">g</a>
 				 <a href="https://www.tineye.com/search?url={{ config.domain }}{{ config.uri_img }}{{ post.file }}">t</a>
 				</span>
 			{% endif %}
