Board search content implementation
you can search boards with this mod.

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,6 +57,17 @@
 	
 	{% if config.global_message %}<hr /><div class="blotter">{{ config.global_message }}</div>{% endif %}
 	<hr />
+	<!-- Start Search Form -->
+	{% if config.board_search %}
+        	<form style="display:inline" action="/search.php">
+                	<p style="margin: 10px;">
+                    		<input type="text" name="search" placeholder="{{ board.uri }} search">
+                    		<input type="hidden" name="board" value="{{ board.uri }}">
+                    		<input type="submit" value="Search">
+                	</p>
+        	</form>
+    	{% endif %}
+    	<!-- End Search Form -->
 	<form name="postcontrols" action="{{ config.post_url }}" method="post">
 	<input type="hidden" name="board" value="{{ board.uri }}" />
 	{% if mod %}<input type="hidden" name="mod" value="1" />{% endif %}
