--- a/stylesheets/sharp.css
+++ b/stylesheets/sharp.css
@@ -80,6 +80,7 @@ input[type="text"], input[type="password"], textarea {
 	text-shadow: none;
 	text-transform: none;
 	word-spacing: normal;
+	padding: 4px;
 }
 form table tr td {
 	text-align: left;
@@ -93,11 +94,11 @@ form table tr th {
 form table tr th {
 	background: #AF0A0F;
 	color: #FFF;
+	border: 1px solid #800000; 
 }
 form table tr td div {
 	text-align: center;
 	float: left;
-	padding-left: 3px;
 }
 form table tr td div input {
 	display: block;
@@ -345,8 +346,7 @@ div.boardlist.bottom {
 }
 div.boardlist a {
 	text-decoration: none;
-    color:#ffff22;
-    text-shadow: #000 1px 1px 1px, #000 -1px -1px 1px, #950000 1px 1px 2px, #009500 -1px -1px 2px;
+	color: #AF0A0F;
 }
 div.report {
 	color: #333;
