--- a/templates/mod/move_reply.html
+++ b/templates/mod/move_reply.html
@@ -1,4 +1,4 @@
-<form action="?/{{ board }}/move_reply/{{ post }}" method="post">
+<form action="?/{{ board }}/move_reply/{{ post }}" method="post" onsubmit="myButton.disabled = true; return true;">
 	<input type="hidden" name="token" value="{{ token }}">
 	<table>
 		<tr>
