Fix dashboard Countable on non-countable error
Only affected PHP7.2, was due to a sloppy template. PHP7.2 is much more
strict than previous versions so these kinds of bugs are coming to the
fore.

--- a/templates/mod/dashboard.html
+++ b/templates/mod/dashboard.html
@@ -131,7 +131,7 @@
 	</fieldset>
 {%  endif %}
 
-{% if config.mod.dashboard_links|count %}
+{% if config.mod.dashboard_links and config.mod.dashboard_links|count %}
 	<fieldset>
 		<legend>{% trans 'Other' %}</legend>
 	
