--- a/templates/themes/index/index.html
+++ b/templates/themes/index/index.html
@@ -100,11 +100,9 @@
 	<hr/>
 	<footer>
 		<p class="unimportant" style="margin-top:20px;text-align:center;">- Tinyboard + 
-			<a href="https://engine.vichan.net/">vichan</a> + 
-			<a href="https://github.com/fallenPineapple/NPFchan">NPFchan</a> {{ config.version }} -
+			<a href="https://engine.vichan.net/">vichan</a> {{ config.version }} -
 		<br>Tinyboard Copyright &copy; 2010-2014 Tinyboard Development Group    
-		<br><a href="https://engine.vichan.net/">vichan</a> Copyright &copy; 2012-2016 vichan-devel
-		<br><a href="https://github.com/fallenPineapple/NPFchan">NPFchan</a> Copyright &copy; 2017 NPFchan</p>
+		<br><a href="https://engine.vichan.net/">vichan</a> Copyright &copy; 2012-2018 vichan-devel
 	</footer>
 </body>
 </html>
