--- a/templates/themes/index/index.css
+++ b/templates/themes/index/index.css
@@ -21,9 +21,9 @@
 }
 .mainBox {
 	background: transparent;
-    border: 1px solid #008080;
-    width: 100%;
-    margin-bottom: 5px;
+	border: 1px solid #008080;
+	width: 100%;
+	margin-bottom: 5px;
 }
 .mainBox h2 {
 	background: #59A;
@@ -31,12 +31,12 @@
 }
 .box.image {
 	background: transparent;
-    border: none;
-    width: 100%;
-    min-height: 250px;
-    max-height: 400px;
-    overflow-x: hidden;
-    overflow-y:  auto;;
+	border: none;
+	width: 100%;
+	min-height: 250px;
+	max-height: 400px;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 .box img {
 	float: left;
@@ -46,34 +46,34 @@
 	border-radius: 10px;
 }
 .icon {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 100px;
 }
 .imageofnow {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 300px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 300px;
 }
 .videoofnow {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 500px;
-    max-height: 300px;
- }
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 500px;
+	max-height: 300px;
+}
 .quoteofnow {
-    text-align: center;
-    font-size: 20px;
-    font-family: -WEBKIT-PICTOGRAPH;
+	text-align: center;
+	font-size: 20px;
+	font-family: -WEBKIT-PICTOGRAPH;
 }
 .description {
-    text-align: center;
-    font-weight: bolder;
- }
+	text-align: center;
+	font-weight: bolder;
+}
 .boardlinksurl {
-    float: left;
-    margin-right: 100px;
+	float: left;
+	margin-right: 100px;
 }
