--- a/templates/mod/view_ip.html
+++ b/templates/mod/view_ip.html
@@ -3,7 +3,7 @@
 		<legend>
 			<a href="?/{{ config.board_path|sprintf(board_posts.board.uri) }}{{ config.file_index }}">
 				{{ config.board_abbreviation|sprintf(board_posts.board.uri) }}
-				 - 
+				 -
 				 {{ board_posts.board.title|e }}
 			</a>
 		</legend>
@@ -17,7 +17,7 @@
 			{% set notes_on_record = 'note' ~ (notes|count != 1 ? 's' : '') ~ ' on record' %}
 			<legend>{{ notes|count }} {% trans notes_on_record %}</legend>
 		</legend>
-		
+
 		{% if notes|count > 0 %}
 			<table class="modlog">
 				<tr>
@@ -45,7 +45,7 @@
 						</td>
 						{% if mod|hasPermission(config.mod.remove_notes) %}
 							<td class="minimal">
-								<a href="?/IP/{{ ip|url_encode(true) }}/remove_note/{{ note.id }}">
+								<a href="?/IP/{{ ip|cloak_ip|url_encode(true) }}/remove_note/{{ note.id }}">
 									<small>[{% trans 'remove' %}]</small>
 								</a>
 							</td>
@@ -54,7 +54,7 @@
 				{% endfor %}
 			</table>
 		{% endif %}
-		
+
 		{% if mod|hasPermission(config.mod.create_notes) %}
 			<form action="" method="post" style="margin:0">
 				<input type="hidden" name="token" value="{{ security_token }}">
@@ -85,7 +85,7 @@
 	<fieldset id="bans">
 		{% set bans_on_record = 'ban' ~ (bans|count != 1 ? 's' : '') ~ ' on record' %}
 		<legend>{{ bans|count }} {% trans bans_on_record %}</legend>
-		
+
 		{% for ban in bans %}
 			<form action="" method="post" style="text-align:center">
 				<input type="hidden" name="token" value="{{ security_token }}">
@@ -102,7 +102,7 @@
 					</tr>
 					<tr>
 						<th>{% trans 'IP' %}</th>
-						<td>{{ ban.mask }}</td>
+						<td>{{ ban.cmask }}</td>
 					</tr>
 					<tr>
 						<th>{% trans 'Reason' %}</th>
@@ -169,7 +169,7 @@
 {% if mod|hasPermission(config.mod.ban) %}
 	<fieldset>
 		<legend>{% trans 'New ban' %}</legend>
-		{% set redirect = '?/IP/' ~ ip ~ '#bans' %}
+		{% set redirect = '?/IP/' ~ ip|cloak_ip ~ '#bans' %}
 		{% include 'mod/ban_form.html' %}
 	</fieldset>
 {% endif %}
