--- a/templates/mod/recent_posts.html
+++ b/templates/mod/recent_posts.html
@@ -16,4 +16,4 @@
 		</div>
 	{% endfor %}
 {% endif %}
-<a href="/mod.php?/recent/{{ limit|e }}&amp;last={{ last_time|e }}">Next {{ limit }} posts</a>
+<a href="{{ config.root }}mod.php?/recent/{{ limit|e }}&amp;last={{ last_time|e }}">Next {{ limit }} posts</a>
