--- a/templates/important.html
+++ b/templates/important.html
@@ -1,7 +1,7 @@
 <div class="ban">
     {% for telegram in telegrams %}
     <div style="padding: 10px;">
-        <cite>{{ telegram.created_at|date(config.post_date) }}</cite>
+        <cite><time datetime="{{ telegram.created_at|date('%Y-%m-%dT%H:%M:%S') }}{{ timezone() }}">{{ post.time|date(config.post_date) }}</time></cite>
         <p>{{ telegram.message }}</p>
     </div>
     <hr>
