Show ban appeal count on mod dashboard

--- a/templates/mod/dashboard.html
+++ b/templates/mod/dashboard.html
@@ -91,7 +91,9 @@
 			<li><a href="?/bans">{% trans 'Ban list' %}</a></li>
 		{% endif %}
 		{% if config.ban_appeals and mod|hasPermission(config.mod.view_ban_appeals) %}
-			<li><a href="?/ban-appeals">{% trans 'Ban appeals' %}</a></li>
+			{% if appeals > 0 %}<strong>{% endif %}
+				<li><a href="?/ban-appeals">{% trans 'Ban appeals' %}</a></li>
+			{% if appeals > 0 %}</strong>{% endif %}
 		{% endif %}
 		{% if mod|hasPermission(config.mod.manageusers) %}
 			<li><a href="?/users">{% trans 'Manage users' %}</a></li>
