--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -549,7 +549,7 @@ table.mod.config-editor input[type="text"] {
   z-index: 30;
   box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
   border-bottom: 1px solid;
-  background-color: #D6DAF0;
+  background: inherit;
 }
 
 .desktop-style body {
@@ -795,6 +795,8 @@ pre {
   height: 100%;
   text-align: center;
   z-index: 9900;
+  background: inherit;
+  visibility: hidden;
 }
 
 #options_background, #alert_background {
@@ -808,6 +810,7 @@ pre {
   width: 100%;
   height: 100%;
   z-index: -1;
+  visibility: visible;
 }
 
 #options_div, #alert_div {
@@ -816,6 +819,8 @@ pre {
   display: inline-block;
   position: relative;
   margin-top: 20px;
+  background: inherit;
+  visibility: visible;
 }
 
 #options_div {
@@ -823,6 +828,7 @@ pre {
   height: 400px;
   resize: both;
   overflow: auto;
+  border: 1px solid;
 }
 
 
@@ -866,7 +872,6 @@ pre {
 
 .options_tab_icon {
   padding: 5px;
-  color: black;
   cursor: pointer;
 }
 
