`{% (end)?raw %}` ⇒ `{% (end)?verbatim %}`
```
rg '\{%\s*raw' -l | xargs -I{} sed -i -e 's/{%\(\s*\)raw/{%\1verbatim/g; s/endraw\(\s*\)%}/endverbatim\1%}/g' {}
```

Close vichan-devel/vichan#452.

--- a/templates/header.html
+++ b/templates/header.html
@@ -18,7 +18,7 @@
 			{% endif %}
 		{% endif %}
 		{% if config.recaptcha %}<script src="//www.google.com/recaptcha/api.js"></script>
-		<style type="text/css">{% raw %}
+		<style type="text/css">{% verbatim %}
 			#recaptcha_area {
 				float: none !important;
 				padding: 0 !important;
@@ -46,4 +46,4 @@
 			.recaptchatable, #recaptcha_area tr, #recaptcha_area td, #recaptcha_area th {
 				padding: 0 !important;
 			}
-		{% endraw %}</style>{% endif %}
+		{% endverbatim %}</style>{% endif %}
