--- a/templates/thread.html
+++ b/templates/thread.html
@@ -89,8 +89,8 @@
 		<br><a href="https://engine.vichan.net/">vichan</a> Copyright &copy; 2012-2018 vichan-devel</p>
 		{% for footer in config.footer %}<p class="unimportant" style="text-align:center;">{{ footer }}</p>{% endfor %}
 	</footer>
-	<script type="text/javascript">{% raw %}
+	<script type="text/javascript">{% verbatim %}
 		ready();
-	{% endraw %}</script>
+	{% endverbatim %}</script>
 </body>
 </html>
