Adjust css theme
Fix responsive

--- a/templates/themes/recent/recent.css
+++ b/templates/themes/recent/recent.css
@@ -48,3 +48,15 @@
 	float: none;
 	margin: 10px auto;
 }
+
+@media screen and (max-width: 696px) {
+	.box-wrap {
+		overflow: visible;
+	}
+	.box {
+		width: 100%;
+	}
+	.box ul {
+		text-align: center;
+	}
+}
