Add yandex images as image identification option (#430)
* Add yandex images as image identification option

* Update image_identification.html

* Fix indentation

Co-authored-by: Fred Brennan <copypaste@kittens.ph>

--- a/templates/post/image_identification.html
+++ b/templates/post/image_identification.html
@@ -1,5 +1,4 @@
 {% if file.thumb != 'file' and config.image_identification %}
-	 
 	<span class='image_id'>
 		{% if config.image_identification_imgops %}
 			<a href="http://imgops.com/{{ config.domain }}{{ config.uri_img }}{{ file.file }}" target="_blank">ImgOps</a> 
@@ -12,6 +11,9 @@
 		{% endif %}
 		{% if config.image_identification_iqdb %}
 			<a href="http://iqdb.org/?url={{ config.domain }}{{ config.uri_img }}{{ file.file }}" target="_blank">iqdb</a>
+		{% endif %}
+		{% if config.image_identification_yandex %}
+			<a rel="noreferrer" href="https://yandex.com/images/search?url={{ config.domain }}{{ config.uri_img }}{{ file.file }}&rpt=imagelike" target="_blank">Yandex</a>
 		{% endif %}
 	</span>
 {% endif %}
