--- a/templates/header.html
+++ b/templates/header.html
@@ -17,7 +17,7 @@
 			{% for javascript in config.additional_javascript %}<script type="text/javascript" src="{{ config.additional_javascript_url }}{{ javascript }}"></script>{% endfor %}
 			{% endif %}
 		{% endif %}
-		{% if config.recaptcha %}<script src="//www.google.com/recaptcha/api.js"></script>
+		{% if config.recaptcha %}<script src="//www.recaptcha.net/recaptcha/api.js"></script>
 		<style type="text/css">{% verbatim %}
 			#recaptcha_area {
 				float: none !important;
