--- a/templates/mod/login.html
+++ b/templates/mod/login.html
@@ -1,4 +1,5 @@
 {% if error %}<h2 style="text-align:center">{{ error }}</h2>{% endif %}
+{% if config.url_banner %}<img class="board_image" src="{{ config.url_banner }}" {% if config.banner_width or config.banner_height %}style="{% if config.banner_width %}width:{{ config.banner_width }}px{% endif %};{% if config.banner_width %}height:{{ config.banner_height }}px{% endif %}" {% endif %}alt="" />{% endif %}
 <form action="" method="post">
 <table style="margin-top:25px;">
 	<tr>
