--- a/templates/themes/index/index.html
+++ b/templates/themes/index/index.html
@@ -98,12 +98,9 @@
 	</div>
 	
 	<hr/>
-	<footer>
-		<p class="unimportant" style="margin-top:20px;text-align:center;">- Tinyboard + 
-			<a href="https://engine.vichan.net/">vichan</a> {{ config.version }} -
-		<br>Tinyboard Copyright &copy; 2010-2014 Tinyboard Development Group    
-		<br><a href="https://engine.vichan.net/">vichan</a> Copyright &copy; 2012-2018 vichan-devel
-	</footer>
+
+	{% include 'footer.html' %}
+	
 </body>
 </html>
 {% endfilter %}
