--- a/templates/post_thread.html
+++ b/templates/post_thread.html
@@ -1,4 +1,4 @@
-{% filter remove_whitespace %}
+{% apply spaceless %}
 {# tabs and new lines will be ignored #}
 
 <div class="thread" id="thread_{{ post.id }}" data-board="{{ board.uri }}">
@@ -58,7 +58,7 @@
 	{% include 'post/post_controls.html' %}
 	</p>
 	<div class="body">
-		{% endfilter %}{% if index %}{{ post.body|truncate_body(post.link) }}{% else %}{{ post.body }}{% endif %}{% filter remove_whitespace %}
+		{% endapply %}{% if index %}{{ post.body|truncate_body(post.link) }}{% else %}{{ post.body }}{% endif %}{% apply spaceless %}
 		{% if post.modifiers['ban message'] %}
 			{{ config.mod.ban_message|sprintf(post.modifiers['ban message']) }}
 		{% endif %}
@@ -86,7 +86,7 @@
 	{% endif %}
 {% if not index %}
 {% endif %}
-</div>{% endfilter %}
+</div>{% endapply %}
 {% set hr = post.hr %}
 {% for post in post.posts %}
 	{% include 'post_reply.html' %}
