--- a/templates/themes/catalog/catalog.html
+++ b/templates/themes/catalog/catalog.html
@@ -1,4 +1,4 @@
-{% filter remove_whitespace %}
+{% apply spaceless %}
 <!doctype html>
 <html>
 <head>
@@ -88,4 +88,4 @@
 	{% endverbatim %}</script>
 </body>
 </html>
-{% endfilter %}
+{% endapply %}
