--- a/templates/themes/frameset/news.html
+++ b/templates/themes/frameset/news.html
@@ -1,4 +1,4 @@
-{% filter remove_whitespace %}
+{% apply spaceless %}
 <!doctype html>
 <html>
 <head>
@@ -13,7 +13,7 @@
 	</header>
 	
 	<div class="ban">
-		{% if news|count == 0 %}
+		{% if news|length == 0 %}
 			<p style="text-align:center" class="unimportant">(No news to show.)</p>
 		{% else %}
 			{% for entry in news %}
@@ -33,4 +33,4 @@
 		{% include 'footer.html' %}
 </body>
 </html>
-{% endfilter %}
+{% endapply %}
