--- a/templates/themes/frameset/sidebar.html
+++ b/templates/themes/frameset/sidebar.html
@@ -1,4 +1,4 @@
-{% filter remove_whitespace %}
+{% apply spaceless %}
 <!doctype html>
 <html>
 <head>
@@ -38,4 +38,4 @@
 	</fieldset>
 </body>
 </html>
-{% endfilter %}
+{% endapply %}
