--- a/templates/mod/config-editor-php.html
+++ b/templates/mod/config-editor-php.html
@@ -2,15 +2,17 @@
 	<p>
 		Any changes you make here will simply be appended to <code>{{ file }}</code>. If you wish to make the most of Tinyboard's customizability, you can instead edit the file directly. This page is intended for making quick changes and for those who don't have a basic understanding of PHP code.
 	</p>
-	{% if boards|count %}
+	{% if boards|length %}
 		<ul>
 			{% if board %}
 				<li><a href="?/config">Edit site-wide config</a></li>
 			{% endif %}
-			{% for _board in boards if _board.uri != board %}
-				<li>
-					<a href="?/config/{{ _board.uri }}">Edit config for {{ config.board_abbreviation|sprintf(_board.uri) }}</a>
-				</li>
+			{% for _board in boards %}
+				{% if _board.uri != board %}
+					<li>
+						<a href="?/config/{{ _board.uri }}">Edit config for {{ config.board_abbreviation|sprintf(_board.uri) }}</a>
+					</li>
+				{% endif %}
 			{% endfor %}
 		</ul>
 	{% endif %}
