--- a/templates/themes/basic/index.html
+++ b/templates/themes/basic/index.html
@@ -1,4 +1,4 @@
-{% filter remove_whitespace %}
+{% apply spaceless %}
 <!doctype html>
 <html>
 <head>
@@ -19,7 +19,7 @@
 	</header>
 	
 	<div class="ban">
-		{% if news|count == 0 %}
+		{% if news|length == 0 %}
 			<p style="text-align:center" class="unimportant">(No news to show.)</p>
 		{% else %}
 			{% for entry in news %}
@@ -40,4 +40,4 @@
 		{% include 'footer.html' %}
 </body>
 </html>
-{% endfilter %}
+{% endapply %}
