--- a/templates/themes/categories/news.html
+++ b/templates/themes/categories/news.html
@@ -1,4 +1,4 @@
-{% filter remove_whitespace %}
+{% apply spaceless %}
 <!doctype html>
 <html>
 <head>
@@ -14,7 +14,7 @@
 	</header>
 	
 	<div class="ban">
-		{% if news|count == 0 %}
+		{% if news|length == 0 %}
 			<p style="text-align:center" class="unimportant">{% trans %}(No news to show.){% endtrans %}</p>
 		{% else %}
 			{% for entry in news %}
@@ -34,4 +34,4 @@
 		{% include 'footer.html' %}
 </body>
 </html>
-{% endfilter %}
+{% endapply %}
