--- a/templates/themes/index/index.html
+++ b/templates/themes/index/index.html
@@ -1,4 +1,4 @@
-{% filter remove_whitespace %}
+{% apply spaceless %}
 <!doctype html>
 <html>
 <head>
@@ -46,7 +46,7 @@
 	        <br>
 	    </div>
 	    <div class="ban">
-		{% if news|count == 0 %}
+		{% if news|length == 0 %}
 			<p style="text-align:center" class="unimportant">(No news to show.)</p>
 		{% else %}
 			{% for entry in news %}
@@ -103,4 +103,4 @@
 	
 </body>
 </html>
-{% endfilter %}
+{% endapply %}
