--- a/templates/themes/recent/recent.html
+++ b/templates/themes/recent/recent.html
@@ -1,4 +1,4 @@
-{% filter remove_whitespace %}
+{% apply spaceless %}
 <!doctype html>
 <html>
 <head>
@@ -60,4 +60,4 @@
 	
 </body>
 </html>
-{% endfilter %}
+{% endapply %}
