allow cyclical images to be set independently of stickies

--- a/templates/post_thread.html
+++ b/templates/post_thread.html
@@ -45,7 +45,7 @@
 		{% if config.font_awesome %}
 			<i class="fa fa-refresh" title="Cyclical"></i>
 		{% else %}
-			<img class="icon" title="Cyclical" src="{{ config.image_sticky }}" alt="Cyclical" />
+			<img class="icon" title="Cyclical" src="{{ config.image_cyclical }}" alt="Cyclical" />
 		{% endif %}
 	{% endif %}
 	{% if index %}
